--- a/views/creditrecord.pug
+++ b/views/creditrecord.pug
@@ -105,37 +105,40 @@ head
               if user.userrole == "Manager" || user.userrole == "Director"
                 h2.txt1(style='font-size:30px;text-decoration:underline;') Total Credit Sales : #{new Intl.NumberFormat().format(total.creditsells)} Ugx 
             else 
-              h2.txt1(style='font-size:30px;text-decoration: underline;') No Purchase records
+              h2.txt1(style='font-size:30px;text-decoration: underline;') No Credit Sale Records
             .table-responsive(style='padding:20px;')
               table.table.table-bordered.table-hover.table-secondary
                 thead
                   tr
                     th Branch
-                    th Customer                  
+                    th Customer 
+                    th NIN                 
                     th Product                   
-                    th Qty,tonnes
+                    th Qty,
                     th Salesagent                    
                     th Total (shs) 
-                    th Comments                  
+                                   
                 tbody(style='overflow-y: scroll;')
                 if users.length
                   each user in users
                     tr
                       td #{user.branch}
-                      td #{user.customername}               
+                      td #{user.customername} 
+                      td #{user.nin}              
                       td #{user.pdct}                                             
                       td #{user.quantity}
                       td #{user.agent}
                       td #{new Intl.NumberFormat().format(user.total)}
-                      td #{user.comments}
+                        //td #{user.comments}
                   tr 
                     td 
                     td
                     td 
                     td
+                    td
                     td Total sales
                     td #{new Intl.NumberFormat().format(total.creditsells)}
-                    td     
+                       
             .col.col-md-12              
               a.btn.custom( href="/creditsaleslist/update" style='width: 40%;margin-top: 0px;height:50px;margin-left:350px;' type='submit')
                 | Update
