--- a/views/editpurchases.pug
+++ b/views/editpurchases.pug
@@ -117,7 +117,7 @@ head
                         option(value='Matugga' selected=user.branch==="Matugga") MATUGGA Branch
                     .align
                       label.form-label Supplier Name:
-                      input(type='text' name='customername' placeholder='*Customer Name ' value=user.customername)
+                      input(type='text' name='customername' readonly placeholder='*Customer Name ' value=user.customername)
                       .invalid-feedback
                         | Enter a valid Customer name.
                     .align
