--- a/views/salesrecord.pug
+++ b/views/salesrecord.pug
@@ -106,7 +106,7 @@ head
               if user.userrole == "Manager" || user.userrole == "Director"
                 h2.txt1(style='font-size:30px;text-decoration:underline;') Total Sales : #{new Intl.NumberFormat().format(total.totalsells)} Ugx 
             else 
-              h2.txt1(style='font-size:30px;text-decoration: underline;') No Purchase records
+              h2.txt1(style='font-size:30px;text-decoration: underline;') No Sales Records
             .table-responsive(style='padding:20px;')
               table#table.table.table-bordered.table-hover.table-secondary
                 thead
