--- a/views/farm.pug
+++ b/views/farm.pug
@@ -104,7 +104,7 @@ head
               | Local Farm Produce
               | Form
             .signup
-              form(name='registration' action="/farm" method="POST")
+              form(name='registration' action="/farm" method="POST" onsubmit="return validation2();")
                 .row
                   .col.col-md-10
                     ul
@@ -142,7 +142,7 @@ footer.page-footer.font-small.blue.pt-4
     .row
       .col-md-2.mt-md-0.mt-3
         div
-          img.card-img-top(src='./Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
+          img.card-img-top(src='/Img/logo5.jpg' style='width:50px; height:50px; border-radius: 10px;' alt='Me In Class on Day on3')
       .col-md-10.mt-md-0.mt-3.footer-copyright.text-center.py-3.textcontent
         | &copy; 2022 Copyright:
         | Karibu Groceries LTD
@@ -152,7 +152,7 @@ script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
 // Bootstrap JS
 script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
-script(src='/js/purchase.js')
+script(src='/js/farm.js')
 script(type='text/javascript').
   $(document).ready(function () {
   $('#sidebarCollapse').on('click', function () {
