--- a/views/editsales.pug
+++ b/views/editsales.pug
@@ -156,7 +156,7 @@ head
                         | Please enter a Quantity in tonnnes.
                     .align
                       label.form-label Total Amount (shs):
-                      input#txtresult(type='Float' name='total' placeholder='*Amount(shs).' value=user.total)
+                      input#total(type='Float' name='total' placeholder='*Amount(shs).' value=user.total)
                     .align
                       label.form-label Agent:
                       input(type='text' name='agent' readonly placeholder='Agent name' value=user.agent )
