--- a/views/purchasesrecord.pug
+++ b/views/purchasesrecord.pug
@@ -116,7 +116,7 @@ head
                     th Supplier                   
                     th Product 
                     th Manager                  
-                    th Qty,tonnes
+                    th Quantity in Tonnes
                     th Unit Price(shs)                    
                     th Total(shs)                 
                 tbody(style='overflow-y: scroll;')
