--- a/views/prices.pug
+++ b/views/prices.pug
@@ -104,7 +104,7 @@ head
               | Price Records
               | Form
             .signup
-              form(name='registration' action="/pricelist" method="POST")
+              form(name='registration' action="/pricelist" method="POST" onsubmit="return validation2();")
                 .row
                   .col.col-md-10
                     ul
@@ -119,8 +119,7 @@ head
                           option(value='Beans') Beans
                           option(value='Maize') Maize
                           option(value='Cowpeas') Cow Peas
-                          option(value='SoyBeans') Soy Beans
-                          
+                          option(value='SoyBeans') Soy Beans                          
                           option(value='Gnuts') Gnuts
                       li.align
                         label Price (shs):
@@ -145,7 +144,7 @@ script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-
 script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
 // Bootstrap JS
 script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
-script(src='/js/purchase.js')
+script(src='/js/price.js')
 script(type='text/javascript').
   $(document).ready(function () {
   $('#sidebarCollapse').on('click', function () {
