--- a/views/home.pug
+++ b/views/home.pug
@@ -113,6 +113,10 @@ head
                     if user.userrole == "Director" || user.userrole == "Manager"
                       li.list-group-item
                         a(href='/pricelist' style=' text-decoration: none; color:#07026d;') Price Form
+                      li.list-group-item
+                        a(href='/register' style=' text-decoration: none; color:#07026d;') Register Employees
+                      li.list-group-item
+                        a(href='/employeelist' style=' text-decoration: none; color:#07026d;') Employee Records
 footer.page-footer.font-small.blue.pt-4
   .container-fluid.text-center.text-md-left
     .row
