--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -200,7 +200,7 @@ button {
   transition: 0.8s ease-in-out;
 }
 .custom{
-  background: #1004ff;
+  background: #00ff00;
 }
 .custom:hover {
   background: #00ff00;
