--- a/views/farm.pug
+++ b/views/farm.pug
@@ -110,14 +110,14 @@ head
                     ul
                       li.align
                         label KGL Branch:
-                        select(name='userole' onblur='rol()' required='')
+                        select(name='userole' onblur='rol()' )
                           option(value='Default')
                             | KGL Branch
                           option(value='Maganjo') MAGANJO Branch
                           option(value='Matugga') MATUGGA Branch
                       li.align
                         label Agricultural Product:
-                        select(name='pdct' onblur='role1()' required='')
+                        select(name='pdct' onblur='role1()' )
                           option(value='Default')
                             | Product Name
                           option(value='Beans') Beans
@@ -128,10 +128,10 @@ head
                           option(value='Gnuts') Gnuts
                       li
                         label(for='start') Purchase Date:
-                        input(type='datetime-local' name='date' value='' min='1960-01-01' required='' max='2100-12-31' onblur='dte()')
+                        input(type='datetime-local' name='date' value='' min='1960-01-01' max='2100-12-31' onblur='dte()')
                       li.align
                         label Qty, Tonnes(1000kg):
-                        input#qty(type='Float' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' required='' onblur='add1()' oninput='add_number()')
+                        input#qty(type='Float' name='quantity' placeholder='*Quantity in Tonnes.(1000kgs)' onblur='add1()' oninput='add_number()')
                       li.align
                         label Comments:
                         textarea#comments(type='text' name='comments' placeholder='*Comments on Agricultural Produce.' rows='5' cols='33')
