home css update

--- a/views/home.pug
+++ b/views/home.pug
@@ -19,7 +19,7 @@ head
   nav#sidebar
     .sidebar-header
       h3
-        img(src='/Img/logo5.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
+        img(src='/Img/logo6.jpg' style='width:160px; height:160px; border-radius: 3px; background-color: #ddd;')
       strong KGL
     ul.list-unstyled.components(style='font-size: 19px;')
       li.active
@@ -44,7 +44,7 @@ head
               p.nav-link.active.nav1(aria-current='page' style='color:#181553;font-size:40px')
                 | Karibu
                 | Groceries Limited .
-          button.btn.btn-outline-primary
+          button.btn.btn-outline-primary.btn-warning
             a.nav-link(href='/logout' style='color:#181553;  ') LogOut
     #blog-container.container-fluid
       .row
