--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ head
   link(href='https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap' rel='stylesheet')
   title  Karibu Groceries LTD.
 .wrapper
-  nav.navbar.navbar-expand-lg.navbar-dark
+  nav.navbar.navbar-expand-lg.navbar-dark.text-warning
     .container-fluid
       li.nav-item
         img(src='/Img/logo5.jpg' style='width:60px; height:60px; border-radius: 3px; background-color: #ddd;')
@@ -29,7 +29,7 @@ head
         h3.txt2(style=' margin-left: 30px; ')
           | &quot;FEEDING THE NATION.&quot;
         div
-          img.card-img-top.d-none.d-md-block(src='/Img/logo5.jpg' style='width:auto; height:auto; 	\
+          img.card-img-top.d-none.d-md-block(src='/Img/logo7.jpg' style='width:auto; height:auto; 	\
           box-shadow: 5px 20px 50px #000;border-radius: 30px; margin-left: 100px;margin-top: 40px;' alt='Me In Class on Day on3')
       .col.col-md-5
         .main(style=' background-color: #07026d')
