--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ head
   #blog-container.container-fluid
     .row
       .col-md-4.mt-md-0.mt-4
-        h1.txt1.text-danger.bg-secondary(style=' margin-left: 30px; ')
+        h1.txt1.text-warning.bg-secondary(style=' margin-left: 30px; ')
           | Karibu Groceries Limited
         h3.txt2(style=' margin-left: 30px; ')
           | &quot;FEEDING THE NATION.&quot;
@@ -42,7 +42,7 @@ head
               //
                 <div class="form-group required">
                 </div>
-              button.custom(style='width: 70%;\
+              button.custom.btn-warning(style='width: 70%;\
               height:50px;' type='submit') Login
           //
             <div class=" login">
